FIX Ajustement de la taille de la SideBar en version non mobile en thème foncé

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -164,7 +164,7 @@
     --search-background: hsla(210, 15%, 5%, 0.5);
 
     /* -------- SideBar -------- */
-    --vp-sidebar-width: 272px;
+    --vp-sidebar-width: 300px;
     --vp-sidebar-bg-color: var(--vp-c-bg-alt);
 
     /* -------- LocalNav ------- */
